<resources>
    <string name="app_name">Distort</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_homeserver">Homeserver Address</string>
    <string name="error_invalid_address">Address of homeserver is not correctly formatted. Format is [http[s]://]example.com[:port][/sub/path]</string>
    <string name="title_activity_conversations">Peer Conversations</string>
    <string name="error_homeserver_could_not_reach">The given homeserver address was not reachable</string>
    <string name="permission_camera_reason">The Camera permission is required for reading QR codes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_scan_qr">Scan QR</string>
    <string name="prompt_freindly_name">Friendly Name</string>
    <string name="prompt_peer_id">Peer ID</string>
    <string name="text_create_new_conversation">(It is recommended to scan a peer\'s QR code directly.)</string>
    <string name="title_create_new_conversation">Create New Conversation</string>
    <string name="prompt_opt_account_name">(Optional account)</string>
    <string name="prompt_mesage">Message...</string>
    <string name="messages_total_height">Total Messages</string>
    <string name="messages_unread">Unread</string>
    <string name="account_credentials_preferences_key">com.unix4all.rypi.distort.ACCOUNT_CREDENTIALS_PREFERENCES</string>
    <string name="prompt_group_name">Group Name</string>
    <string name="text_join_new_group">Two peers must overlap in groups to which they belong to be able to communicate. Recommended to join default group \"パン\".</string>
    <string name="prompt_group_subgroup_level">(Optional subgroup level)</string>
    <string name="text_join_new_group_level">The level determines the fraction of traffic that will be sent to our homeserver. Higher traffic mean messages sent to us will be received faster, but also requires more processing power and internet usage. Default level is \"Level 0\" (all traffic). \"Level 1\" receives 50% of traffic, \"Level 2\" receives 25%, etc.</string>
    <string name="new_group_join_button">Join Group</string>
    <string name="error_invalid_hash">Invalid IPFS hash format</string>
    <string name="messages_local_key">com.unix4all.rypi.distort.MESSAGES_LOCAL</string>
    <string name="peers_local_key">com.unix4all.rypi.distort.PEERS_LOCAL</string>
    <string name="groups_local_key">com.unix4all.rypi.distort.GROUPS_LOCAL</string>
    <string name="title_activity_groups">Anonymity Groups</string>
    <string name="notification_messages_title">DistoRt</string>
    <string name="notification_messages_text">Received new message(s) ...</string>
    <string name="messaging_preference_key">com.unix4all.rypi.distort.MESSAGING_PREFERENCES</string>
    <string name="new_peer_add_button">Add Peer</string>
    <string name="action_sign_in_with_stored">Sign In With Last Account</string>
    <string name="menu_settings_option">Settings</string>
    <string name="menu_about_option">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_about">About</string>
    <string name="close_button">Close</string>
    <string name="text_about">This is the reference android app for DistoRt over IPFS, a platform for providing anonymous and encrypted messaging between peers. Large anonymity groups are used to obscure the intended recipient of each message, and modern encryption schemes are used to ensure confidentiality. For more information, visit the project website.</string>
    <string name="toggle_enabled">Enabled</string>
    <string name="prompt_active_group">Active Group</string>
    <string name="prompt_remove">Remove</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="title_remove_group">Are you sure you want to remove group?</string>
    <string name="description_remove_group">Removing this group will cause all messages received on it to be deleted forever. You can not receive any messages sent to you over this group while it is removed.</string>
    <string name="hint_wait_for_enable">Please wait 3 seconds for remove button to become active</string>
    <string name="title_remove_peer">Are you sure you want to remove peer?</string>
    <string name="description_remove_peer">You may still receive messages from this peer while they are not added, but they will not be displayed until the peer is added again.</string>
    <string name="account_preferences_key">com.unix4all.rypi.distort.ACCOUNT_PREFERENCES</string>
    <string name="text_default_group_name">パン</string>
    <string name="error_server_error">The homeserver had an internal error</string>
    <string name="error_invalid_account">The given account was not found</string>
    <string name="error_missing_cert">Cannot until peer\'s next routine certificate post</string>
    <string name="change_password_button">Change password</string>
    <string name="prompt_set">SET</string>
    <string name="title_change_password">Change Password</string>
    <string name="error_passwords_do_not_math">Passwords do not match</string>
    <string name="menu_account_id">Account</string>
    <string name="label_account_id">Account Full ID</string>
    <string name="text_place_holder">PLACE HOLDER</string>
    <string name="error_invalid_barcode">Invalid account ID</string>
    <string name="error_resolve_address">Failed to resolve homeserver address</string>
    <string name="icon_colours_preferences_keys">com.unix4all.rypi.distort.ICON_COLOURS</string>
    <string name="text_generating_qr_code">Generating...</string>
    <string name="message_from_self">~</string>
    <string name="menu_set_subgroup">Set group level</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_rename_peer">Rename</string>
    <string name="button_set_group_level">Set level</string>
    <string name="button_rename_peer">Rename peer</string>
    <string name="error_simultaneous_operations">Please wait for previous task to complete</string>
    <string name="button_create_account">Create account</string>
    <string name="hint_req_account_name">Account name</string>
    <string name="hint_create_account_token">Account creation token</string>
    <string name="error_account_already_exists">Specified account already exists</string>
    <string name="error_invalid_signature">Invalid account creation token. \"root\" must sign account name</string>
    <string name="error_no_accounts">There are no accounts using the required IPFS identity</string>
    <string name="hint_text_to_sign">Name of account to allow creation of</string>
    <string name="title_account_activity">Account</string>
    <string name="title_activity_signing">Signature Creation</string>
    <string name="error_generate_barcode">Failed to generate QR code</string>
    <string name="button_sign_text">Generate Account-Creation Token</string>
    <string name="success_update_password">Successfully updated password</string>
    <string name="button_link_twitter">Link Twitter Account</string>
    <string name="linked_accounts_preferences_keys">com.unix4all.rypi.LINKED_ACCOUNTS</string>
    <string name="message_account_link_success">Successfully linked accounts</string>
    <string name="prompt_twitter_handle">Twitter username</string>
    <string name="button_link_social_media">Link</string>
    <string name="error_search_accounts_twitter">Failed to search for Twitter accounts</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">xxxxxxxxxxxxxxxxxxxxx</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">xxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="title_activity_search_twitter">Add Twitter User</string>
    <string name="menu_set_colour">Set colour</string>
    <string name="text_app_link">https://distortapp.org</string>
    <string name="text_getting_started">Hi! Welcome to the DistoRt on IPFS android client. To get started, connect to your private DistoRt homeserver. If you do not already have one, visit https://github.com/ryco117/distort-server for more information.</string>
    <string name="text_getting_started_groups">This is the groups page. Here you can manage the groups that are currently subscribed to. Messages can be received over all joined groups, but they will only be sent over the active group. Joining larger groups is recommended as it increases anonymity.</string>
    <string name="text_getting_started_conversations">This is the conversations page. It allows you to manage peers and message over groups to peers. Peers may be added through their DistoRt IDs directly, or through their social media identities.</string>
    <string name="getting_started_preferences_key">\"com.unix4all.rypi.distort.GETTING_STARTED\"</string>
    <string name="title_getting_started">Getting started</string>
    <string name="title_activity_account">Account</string>
</resources>
