<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/accountToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/accountBarcode"
        android:layout_width="512px"
        android:layout_height="512px"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/text_generating_qr_code"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/generate_qr_code" />

    <TextView
        android:id="@+id/waitingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_generating_qr_code"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/signedQrCode"
        tools:layout_editor_absoluteX="155dp" />

    <TextView
        android:id="@+id/accountIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_place_holder"
        android:textIsSelectable="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/waitingText"
        tools:layout_editor_absoluteX="176dp" />

    <Button
        android:id="@+id/openSignDialogButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_sign_text"
        app:layout_constraintTop_toBottomOf="@+id/accountIdText" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/close_button"
        app:layout_constraintTop_toBottomOf="@+id/openSignDialogButton" />
</LinearLayout>
