<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/removeGroupLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/timedRemoveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="Are you sure you want to remove 'abcd'"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timedRemoveDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="bhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="4dp"
        android:text="@string/hint_wait_for_enable"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timedRemoveCancelButton"
            android:layout_width="53dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@color/cancelButton"
            android:text="@string/prompt_cancel" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/timedRemoveAcceptButton"
            android:layout_width="61dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/removeButton"
            android:text="@string/prompt_remove" />
    </LinearLayout>
</LinearLayout>